--- a/package.json
+++ b/package.json
@@ -9,11 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.1.0"
+    "axios": "^1.6.7",
+    "bootstrap": "^5.3.2",
+    "mdbootstrap": "^4.20.0",
+    "next": "14.1.0",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.10.1",
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
+    "reactstrap": "^9.2.2",
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
+    "@types/node": "20.11.17",
+    "@types/react": "18.2.55",
     "eslint": "^8",
     "eslint-config-next": "14.1.0"
   }
